--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
-      - run: pip install flake8
+          python-version: '3.12'
+      - run: pip install -r requirements.txt flake8
       - run: flake8 .
 
   test:
@@ -23,6 +23,6 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
-      - run: pip install -r requirements.txt pytest
+          python-version: '3.12'
+      - run: pip install -r requirements.txt
       - run: pytest --maxfail=1 --disable-warnings -q
