--- a/.github/workflows/zap.yml
+++ b/.github/workflows/zap.yml
@@ -17,6 +17,6 @@ jobs:
       - name: Run OWASP ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.15.0
         with:
-          target: 'https://www.lulumatch.com/'
+          target: 'https://www.matchbank.com.tw/'
           fail_action: false
           artifact_name: 'zapreport'
